@@ -35,7 +35,7 @@ android {
             includeAndroidResources = true
         }
         unitTests.all {
-            jvmArgs '-noverify'
+            jvmArgs '-noverify','-Djdk.attach.allowAttachSelf=true'
         }
     }
 }
